--- a/amazon.html
+++ b/amazon.html
@@ -1,4 +1,9 @@
-
+<!-- <Script? tags' order matters. (ex. amazon.js depends on products.js)
+- modules help avoid naming conflicts by containing var.s within their file
+  Dont load the file (containing var) w <script>
+  To get var outta file- add type="module" attri to other(where u wanna use the var) file, export(the var), import.
+  IMP: modules only work w Live Server (wont work if u open html file directly from folder)
+-->
 
 <!DOCTYPE html>
 <html>
@@ -47,7 +52,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity js-cart-quantity">3</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -58,9 +63,9 @@
       js-products-grid">      
       </div>
     </div>
-    <script src="data/cart.js"></script>
+    
     <script src="data/products.js"></script>
-    <script src="scripts/amazon.js"></script>
+    <script type="module" src="scripts/amazon.js"></script>
     
   </body>
 </html>
