move addToCart into cart.js

--- a/amazon.html
+++ b/amazon.html
@@ -1,7 +1,7 @@
 <!-- <Script? tags' order matters. (ex. amazon.js depends on products.js)
-- modules help avoid naming conflicts by containing var.s within their file
+- MODULES help avoid naming conflicts by containing var.s within their file
   Dont load the file (containing var) w <script>
-  To get var outta file- add type="module" attri to other(where u wanna use the var) file, export(the var), import.
+  To get var outta file- add type="module" attri to other(where u wanna use the var/ main js file to load our code= called Entry Point) file, export(the var), import.
   IMP: modules only work w Live Server (wont work if u open html file directly from folder)
 -->
 
