save data and generate HTML for delivery options

--- a/amazon.html
+++ b/amazon.html
@@ -3,6 +3,9 @@
   Dont load the file (containing var) w <script>
   To get var outta file- add type="module" attri to other(where u wanna use the var/ main js file to load our code= called Entry Point) file, export(the var), import.
   IMP: modules only work w Live Server (wont work if u open html file directly from folder)
+- ESM version of Ext libraries: version that works w JS modules (ecmascript = JS) 
+  always load the esm ver, for those that dont- use <script>
+  default export (w/out {})- exports only 1 thing
 -->
 
 <!DOCTYPE html>
