move orderSummary into its own file

--- a/amazon.html
+++ b/amazon.html
@@ -6,6 +6,9 @@
 - ESM version of Ext libraries: version that works w JS modules (ecmascript = JS) 
   always load the esm ver, for those that dont- use <script>
   default export (w/out {})- exports only 1 thing
+- MVC code-split : it's a way to write code; divide code into 3 parts- Model = saves + manages the data
+  View = takes data + displays it on page
+  Controller = runs some code when we interact w page
 -->
 
 <!DOCTYPE html>
