Create automated tests for addToCart

--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -1,3 +1,9 @@
+<!--
+- expect() gives obj
+- Mocks(jasmine feature) = lets us replace a method w a fake version
+  spyOn returns obj -> spyOn().and returns obj
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +19,8 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
- <script src="moneyTest.js" type="module"></script>
+ <script src="utils/moneyTest.js" type="module"></script>
+ <script src="data/cartTest.js" type="module"></script>
 
 </head>
 
