Create automated test for orderSummary

--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -2,6 +2,8 @@
 - expect() gives obj
 - Mocks(jasmine feature) = lets us replace a method w a fake version
   spyOn returns obj -> spyOn().and returns obj
+- Integration test: tests multiple units together (ex. a section of page)
+- Hook: runs some code beforeEach() test (other: afterEach() etc)
 -->
 
 <!DOCTYPE html>
@@ -21,9 +23,11 @@
 
  <script src="utils/moneyTest.js" type="module"></script>
  <script src="data/cartTest.js" type="module"></script>
+ <script src="checkout/orderSummaryTest.js" type="module"></script>
 
 </head>
 
 <body>
+  <div class="js-test-container"></div>
 </body>
 </html>
