create oop version of cart

--- a/amazon.html
+++ b/amazon.html
@@ -9,6 +9,8 @@
 - MVC code-split : it's a way to write code; divide code into 3 parts- Model = saves + manages the data
   View = takes data + displays it on page
   Controller = runs some code when we interact w page
+- Procedural programming = organizing code into functions
+  OOP = organize code into objects (group data + functions together) = tries to represent the real world
 -->
 
 <!DOCTYPE html>
