--- a/amazon.html
+++ b/amazon.html
@@ -11,6 +11,9 @@
   Controller = runs some code when we interact w page
 - Procedural programming = organizing code into functions
   OOP = organize code into objects (group data + functions together) = tries to represent the real world
+  class= object generator (called instance) | constructor = setup code + should not return anything
+  Note: use PascalCase for things that generate objects
+
 -->
 
 <!DOCTYPE html>
