--- a/amazon.html
+++ b/amazon.html
@@ -14,7 +14,10 @@
 - Class= object generator (obj= instance) | constructor = setup code + should not return anything
   Note: use PascalCase for things that generate objects
   private(#) = can only be accessed within the class
-
+- Inheritance: class child extends parent {..} = inherits data + methods
+    super() calls parent constructor() | by default if no child class constructor
+    super.method() - calls parent method
+    discriminator property - tells us which class to convert object to (ex. type)
 -->
 
 <!DOCTYPE html>
