--- a/amazon.html
+++ b/amazon.html
@@ -43,7 +43,9 @@
     async = makes a fn. return (/wraps code in) a promise
     await = lets us wait for a promise to finish b4 moving on | await <async code>
       to use await, the closest fn. must be async
-
+- Error Handling: .catch() in promises | try-catch in AA
+    manually create error -> throw <error>
+    in promises, reject('future_error') - lets us create error in future 
 -->
 
 <!DOCTYPE html>
