Create order using backend

--- a/amazon.html
+++ b/amazon.html
@@ -23,6 +23,7 @@
   .call('wtv') - inside a func, we can change "this" to wtv we want (this becomes undef inside a fn)
 - Backend- manages the data of website
  1.Send req | 2.Use Callback to wait for response | 3.Then run the code
+ GET = get smth from backend, POST = create smth (send data), PUT = update smth, DELETE = delete smth
     dev tools- n/w tab: shows all HTTP msgs coming in/out of our comp
     request/response cycle = 1 req, 1 resp
     IMP: Backend API = list of all supported URL paths = all the ways u can interact w the backend
