Add URL parameters example

--- a/amazon.html
+++ b/amazon.html
@@ -47,6 +47,7 @@
 - Error Handling: .catch() in promises | try-catch in AA
     manually create error -> throw <error>
     in promises, reject('future_error') - lets us create error in future 
+- URL Parameters: let us save data directly in the URL
 -->
 
 <!DOCTYPE html>
